2008-03-01  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (dir): (CygbuildMakefileRunInstallCygwinOptions):
	Fix reading of variable makefile.
	(CygbuildMakefilePrefixCheck): Improve prefix check.
	(CygbuildMakefilePrefixIsStandard): Improve prefix check.
	(CygbuildBootVariablesId): Adjust PATH setting.
	(CygbuildMakeRunInstallFixPerlPostinstall): Improve postinstall
	snippet.
	(CygbuildInstallFixEtcdirInstall): Disregard pre/postinstall
	directory.
	(CygbuildCmdInstallCheckDocdir): Remeove head(1); won't work
	on image files.
	(CygbuildInstallFixInterpreterMain): Tighten regexp.
	(CygbuildInstallFixInterpreterPerl): Improce substitution.
	(CygbuildMakeRunInstallFixPerlPostinstall): Add -E to grep call.

2008-02-29  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::OPTIONS): Remove --init-pkgdb and
	--nomore-space.

	* bin/cygbuild.sh: (CygbuildCmdInstallFinishMessage): Restore
	old code that used pwd. This is correct in packaging scripts.
	(CygbuildIsRubyPackage): New.
	(CygbuildMakefileRunInstallRubyMain): New.
	(CygbuildCmdBuildMain): Add ruby support.
	(CygbuildCmdCleanMain): Add ruby support.
	(CygbuildCmdShadowMain): Add ruby support.
	(CygbuildCmdConfMain): Add ruby support.
	(CygbuildConfRubyMain): New.
	(CygbuildDefineGlobalPackageDatabase): Remove
	(CygbuildBootVariablesGlobalCacheSet): Remove CYGBUILD_CACHE_PAKAGES.
	(CygbuildCommandMain): Remove options --init-pkgdb,
	--nomore-space. Add option --lzma.
	(CygbuildCompressManualPage): New.
	(CygbuildBootVariablesGlobalMain): Add lzma, lzop, rzip to
	cygbuild_opt_exclude_archive_files
	(CygbuildFileTypeByExtension): Add Ruby.
	(CygbuildCygcheckMainOld): Remove.
	(CygbuildCmdInstallCheckBinFiles): Add Ruby.
	(CygbuildIsMakefileCplusplus): Remove.
	(CygbuildIsCplusplusPackage): Remove.
	(CygbuildBootVariablesGlobalMain): Add RPM *.spec to
	CYGBUILD_INSTALL_IGNORE.
	(CygbuildInstallPackageDocs): Fix error in include and exclude
	treatment.